# test-checker

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/program-launcher/: ProgramLauncher.cpp  ProgramLauncher.h
src/test/: Test.h
src/tests-queue/: TestsQueue.cpp  TestsQueue.h  TestsStack.cpp  TestsStack.h
src/tests-stack/: TestsStack.cpp  TestsStack.h
tests/: main.cpp
tests/program-launcher-tests/: ProgramLauncherTests.cpp  ProgramLauncherTests.h
tests/test-runner/: TestRunner.cpp  TestRunner.h
tests/tests-stack-tests/: TestsStackTests.cpp  TestsStackTests.h
